# poetry-multiproject-demo

./: .dockerignore  Dockerfile  readme.md
app-bar/: pyproject.toml
app-foo/: pyproject.toml
app-foo/app-foo/: foo.py
app-utils/: pyproject.toml
cli/: pyproject.toml
corelib/: pyproject.toml
corelib/corelib/: core.py
corelib/corelib.egg-info/: PKG-INFO  SOURCES.txt
corelib/tests/: test_corelib.py
lib-a/: pyproject.toml  setup.py.bak
lib-a/lib-a/: liba.py
server/: pyproject.toml
server/server/: server.py
util/: pyproject.toml
util/tests/: test_util.py
util/util/: hi.py
