[tool.poetry]
name = "app-foo"
version = "0.1.0"
description = ""
authors = ["Max Bruchmann <bruchmann@signal7.de>"]

[tool.poetry.dependencies]
python = "^3.7"
lib-a = { path = "../lib-a"}


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
