[tool.poetry]
name = "corelib"
version = "0.1.0"
description = ""
authors = ["Max Fröhlich <maxbruchmann@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pendulum = "^2.0.5"
app-utils = {path = "../app-utils/"}
[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
