[tool.poetry]
name = "lib-a"
version = "0.1.0"
description = ""
authors = ["Max Fröhlich <maxbruchmann@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
scrapy = "^1.8"
requests = "^2.22"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
