[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Max Fröhlich <maxbruchmann@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.1"
corelib = { path  = "../corelib"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
